
Change Log Update (00.00.21)
* 2016-03-23
+ Moved OBV/2 DAO's to compat sub folder to separate data access to original OBV/2 data files vs
  the current new data access objects.
+ These functions will be used later on for writing conversions.

Change Log Update (00.00.20)
* 2016-03-23
+ Created new Model sub folder to separate structures from data access objects.
+ Updated all files to the new model path
+ Added NewUserApplication stub for ModLogin 
+ Currently building out text prompt reading, Initial idea is to have single function in dao.
  Then each mod will have it's own separate file of prompts which it will pass to the dao
  to quick read module specific text prompts.

Change Log Update (00.00.19)
* 2016-03-21
+ Rename MenuManager to StateManager to reflect what it does.
+ Removed unused or old files
+ Working on Logon Module for initial login process, also testing yaml for login prompts.

Change Log Update (00.00.18)
* 2016-03-18
+ Remove Initial Stub for Language File
  Change this to Prompts_Dao, Moved to Data Folder, working on reading the OBV/2 
  Language file for prompts so I can convert this to an easier format to work
  With, later on will write an update for existing prompts.

Change Log Update (00.00.17)
* 2016-03-17
+ Added popping modules off stack when menu system is closed down!
+ Added new shutdown state cleaning in the Session Destructor to make sure the 
  Menu System and all active modules are shutdown per RAII properly.
+ Update Module Login to pass Instantiate SessionIO class for handle key input

Change Log Update (00.00.16)
* 2016-03-17
+ Created new Mods Sub folder to store system modules
  All modules will be containers of system functions like mod_login for login procedures
  mod_messages for message, mod_files for files, mod_bbslist etc.. 
  Each module will contain it's own asynchronous input processing and output
  And everything will pass through from Session->MenuSystem->Modules