@@ -23,8 +23,6 @@
   <VirtualDirectory Name="src">
     <File Name="src/ansi_processor.cpp"/>
     <File Name="src/ansi_processor.hpp"/>
-    <File Name="src/broad_caster.cpp"/>
-    <File Name="src/broad_caster.hpp"/>
     <File Name="src/chat_state.cpp"/>
     <File Name="src/chat_state.hpp"/>
     <File Name="src/common_io.cpp"/>
@@ -79,6 +77,8 @@
       <File Name="src/model/structures.hpp"/>
       <File Name="src/model/users.hpp"/>
     </VirtualDirectory>
+    <File Name="src/session_manager.cpp"/>
+    <File Name="src/session_manager.hpp"/>
   </VirtualDirectory>
   <Dependencies Name="Debug"/>
   <Dependencies Name="Release"/>
